Mat menu checkboxes should no longer wrap

--- a/wowup-electron/src/styles.scss
+++ b/wowup-electron/src/styles.scss
@@ -410,6 +410,8 @@ snack-bar-container {
   }
 }
 
+// MATERIAL OVERRIDES
+
 .mat-tooltip {
   font-size: 0.95em;
 }
@@ -421,6 +423,12 @@ snack-bar-container {
 th.mat-header-cell .mat-sort-header-container.mat-sort-header-sorted .mat-sort-header-arrow {
   opacity: 1 !important;
   transform: translateY(0) !important;
+}
+
+.mat-menu-content {
+  .mat-checkbox {
+    display: block;
+  }
 }
 
 // SCROLLBAR
